refactoring and fixes

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,8 @@
   %head
     %title
       SparkingImage
-    = stylesheet_link_tag 'application', media: :all
-    = javascript_include_tag 'application'
+    = stylesheet_link_tag 'application', controller_path, media: :all
+    = javascript_include_tag 'application', controller_path
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
     = csrf_meta_tags
   %body
