--- a/app/assets/stylesheets/requests.css.scss
+++ b/app/assets/stylesheets/requests.css.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the Requests controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#lightbox img{
+  max-width: 1500px;
+  max-height: 900px;
+  width: auto!important;
+  height: auto!important;
+}
+
+.lb-outerContainer, .lb-dataContainer{
+  max-width: 1520px;
+  max-height: 920px;
+}
