--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title
-      SparkingImage
+      Sparkling Image
     = stylesheet_link_tag 'application', controller_path, media: :all
     = javascript_include_tag 'application', controller_path
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
@@ -14,7 +14,7 @@
           .row-fluid
             .span5
               %h1
-                SparkingImage
+                Sparkling Image
             .span7.text-right
               = render partial: 'layouts/authentication'
         .row-fluid
