--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -6,4 +6,4 @@
   = current_user.roles.first.name
 - else
   = link_to 'Sign Up', new_user_registration_path, class: 'btn btn-link'
-  = link_to 'Sigh In', new_user_session_path, class: 'btn btn-link'
+  = link_to 'Sign In', new_user_session_path, class: 'btn btn-link'
