--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,5 +1,5 @@
 - if current_user
-  = current_user.email
+  = link_to current_user.email, edit_user_registration_path(current_user)
   = link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-link'
   %br
   My role:
